- updated bibtex citation to be a journal article and corrected the year in the bibtex key - 10pt font was hard to read on my laptop so I changed to 12pt font - changed "equally contributed authors" to "authors contributed equally" because the latter is a complete sentence whereas the former is not, so I think it reads better - added link to Floraine's homepage but removed her email, since any email to Floraine will not get a response, but I would like to link people to Floraine's homepage - changed "sorely missed" to "dearly missed" because I think puts a happier spin on things - changed "while the paper was under review" to "after the paper was accepted" because in practice all conditionally accepted papers get accepted, and I think it puts a happier spin on things - uploaded NSERC icon but left the link commented out

--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,7 @@
   color: white;
   font-family: 'Inconsolata', sans-serif;
   text-shadow: -1px 1px #4a4a4a;
-  font-size: 10px;
+  font-size: 12px;
 }
 @media not all and (min-width: 668px) {
   .heroVideo-section-subnote {
